Small fix for body-overflow and auth-layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,6 +74,7 @@ body {
   background: linear-gradient(to bottom, transparent, var(--background-end-rgb))
     var(--background-start-rgb);
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 @layer utilities {
